--- a/Exam-Ref-80-483/CreateAndUseTypes.csproj
+++ b/Exam-Ref-80-483/CreateAndUseTypes.csproj
@@ -8,4 +8,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="xunit.extensibility.core" Version="2.4.2" />
+  </ItemGroup>
+
 </Project>
